# WisconsinSC_cleaner

./: .gitignore  KNOWN_ISSUES.md  LICENSE  README.md  mappings.txt  pyproject.toml  wsc_clean.py
wisconsinsc_cleaner/: mappings.txt  wsc_clean.py
