[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
wisconsinsc_cleaner = ["*.txt"]

[project]
name = "wisconsinsc_cleaner"
version = "0.0.1"
description = "A tool to clean and uniform annotation files from Wisconsin Sleep Cohort (WSC), distributed by NSRR"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
keywords = ['data storage', 'data cleaning', 'medical records']

[project.scripts]
wsc_clean = "wisconsinsc_cleaner.wsc_clean:main"

[project.urls]
"Homepage" = "https://github.com/LucaCerina/WisconsinSC_cleaner"
"Bug Tracker" = "https://github.com/LucaCerina/WisconsinSC_cleaner/issues"

[metadata]
author = "LucaCerina"
author_email = "lccerina@duck.com"
license = "MIT"